# Claude_Updater_Test

./: .gitignore  CMakeLists.txt  J1939_FIRMWARE_UPDATE.md  MODULE_STRUCTURE.md  README.md  j1939_firmware_sender.py  west.yml
workspace/: CMakeLists.txt  Kconfig
workspace/apps/can_bootloader_app/: CMakeLists.txt  Kconfig  prj.conf
workspace/apps/can_bootloader_app/child_image/: mcuboot.conf
workspace/apps/can_bootloader_app/src/: main.c
workspace/boards/arm/stm32f7_custom/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32f7_custom.dts  stm32f7_custom.yaml  stm32f7_custom_defconfig
workspace/drivers/: CMakeLists.txt  Kconfig
workspace/drivers/can_update/: CMakeLists.txt  Kconfig  can_update.c  can_update.h
workspace/libs/: CMakeLists.txt  Kconfig
workspace/libs/j1939_address_claim/: CMakeLists.txt  Kconfig  README.md  j1939_address_claim.c  j1939_address_claim.h
workspace/libs/update_protocol/: CMakeLists.txt  Kconfig  update_protocol.c  update_protocol.h
workspace/scripts/: west-commands.yml
